crates/claptrap-core/tests/snapshots/tests__command__subcommand_value_name.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_7ef26a48'
[1m[4mUsage:[0m [1mmyprog[0m [THING]

[1m[4mCommands:[0m
  [1msub[0m   
  [1mhelp[0m  Print this message or the help of the given subcommand(s)

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_7ef26a48
exit 0
