crates/claptrap-core/tests/snapshots/tests__command__term_width.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_3f7c73ed'
[1m[4mUsage:[0m [1mmyprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--config[0m <cfg>  This is a very long help message that is longer than 80
                      characters and so will wrap
  [1m-h[0m, [1m--help[0m          Print help
EOF_3f7c73ed
exit 0
