crates/claptrap-core/tests/snapshots/tests__command__visible_long_flag_aliases-2.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_7a4f1ebc'
[1m[4mUsage:[0m [1mprog[0m [COMMAND]

[1m[4mCommands:[0m
  [1mtest[0m, [1m--test[0m  [aliases: --testing, --testall, --test_all]
  [1mhelp[0m          Print this message or the help of the given subcommand(s)

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_7a4f1ebc
exit 0
